Multiple checks done now transform

--- a/unittests.cfg
+++ b/unittests.cfg
@@ -1,21 +1,20 @@
 [core]
 unit_test_mode = True
-dags_folder = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/dags
-plugins_folder = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/plugins
-base_log_folder = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/logs
+dags_folder = /usr/local/airflow/dags
+plugins_folder = /usr/local/airflow/plugins
+base_log_folder = /usr/local/airflow/logs
 logging_level = INFO
 fab_logging_level = WARN
 log_filename_template = {{ ti.dag_id }}/{{ ti.task_id }}/{{ ts }}/{{ try_number }}.log
 log_processor_filename_template = {{ filename }}.log
-dag_processor_manager_log_location = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = /usr/local/airflow/logs/dag_processor_manager/dag_processor_manager.log
 executor = SequentialExecutor
-sql_alchemy_conn = sqlite:////Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/unittests.db
+sql_alchemy_conn = sqlite:////usr/local/airflow/unittests.db
 load_examples = True
 donot_pickle = False
 dag_concurrency = 16
 dags_are_paused_at_creation = False
-fernet_key = 6y8eV0s5Jnbipo-bPOwk0ZJJe8LpgoiME9f2cukIS8U=
-non_pooled_task_slot_count = 128
+fernet_key = cr3RMDQL2xYPZVO-K2fmvq8jAtooDxniF_GELjCyGrg=
 enable_xcom_pickling = False
 killed_task_cleanup_time = 5
 secure_mode = False
@@ -91,9 +90,9 @@ max_tis_per_query = 512
 hide_sensitive_variable_fields = True
 
 [elasticsearch]
-elasticsearch_host =
-elasticsearch_log_id_template = {dag_id}-{task_id}-{execution_date}-{try_number}
-elasticsearch_end_of_log_mark = end_of_log
+host =
+log_id_template = {dag_id}-{task_id}-{execution_date}-{try_number}
+end_of_log_mark = end_of_log
 
 [kubernetes]
 dags_volume_claim = default
