--- a/airflow.cfg
+++ b/airflow.cfg
@@ -2,11 +2,11 @@
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
 # This path must be absolute
-dags_folder = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/dags
+dags_folder = /usr/local/airflow/dags
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/logs
+base_log_folder = /usr/local/airflow/logs
 
 # Airflow can store logs remotely in AWS S3, Google Cloud Storage or Elastic Search.
 # Users must supply an Airflow connection id that provides access to the storage
@@ -28,15 +28,24 @@ fab_logging_level = WARN
 logging_config_class =
 
 # Log format
+# Colour the logs when the controlling terminal is a TTY.
+colored_console_log = True
+colored_log_format = [%%(blue)s%%(asctime)s%%(reset)s] {%%(blue)s%%(filename)s:%%(reset)s%%(lineno)d} %%(log_color)s%%(levelname)s%%(reset)s - %%(log_color)s%%(message)s%%(reset)s
+colored_formatter_class = airflow.utils.log.colored_log.CustomTTYColoredFormatter
+
 log_format = [%%(asctime)s] {%%(filename)s:%%(lineno)d} %%(levelname)s - %%(message)s
 simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
 
 # Log filename format
 log_filename_template = {{ ti.dag_id }}/{{ ti.task_id }}/{{ ts }}/{{ try_number }}.log
 log_processor_filename_template = {{ filename }}.log
-dag_processor_manager_log_location = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/logs/dag_processor_manager/dag_processor_manager.log
+dag_processor_manager_log_location = /usr/local/airflow/logs/dag_processor_manager/dag_processor_manager.log
 
 # Hostname by providing a path to a callable, which will resolve the hostname
+# The format is "package:function". For example,
+# default value "socket:getfqdn" means that result from getfqdn() of "socket" package will be used as hostname
+# No argument should be required in the function specified.
+# If using IP address as hostname is preferred, use value "airflow.utils.net:get_host_ip_address"
 hostname_callable = socket:getfqdn
 
 # Default timezone in case supplied date times are naive
@@ -50,7 +59,7 @@ executor = SequentialExecutor
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = sqlite:////Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/airflow.db
+sql_alchemy_conn = sqlite:////usr/local/airflow/airflow.db
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
@@ -61,6 +70,16 @@ sql_alchemy_pool_enabled = True
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool. 0 indicates no limit.
 sql_alchemy_pool_size = 5
+
+# The maximum overflow size of the pool.
+# When the number of checked-out connections reaches the size set in pool_size,
+# additional connections will be returned up to this limit.
+# When those additional connections are returned to the pool, they are disconnected and discarded.
+# It follows then that the total number of simultaneous connections the pool will allow is pool_size + max_overflow,
+# and the total number of "sleeping" connections the pool will allow is pool_size.
+# max_overflow can be set to -1 to indicate no overflow limit;
+# no limit will be placed on the total number of concurrent connections. Defaults to 10.
+sql_alchemy_max_overflow = 10
 
 # The SqlAlchemy pool recycle is the number of seconds a connection
 # can be idle in the pool before it is invalidated. This config does
@@ -87,10 +106,6 @@ dag_concurrency = 16
 # Are DAGs paused by default at creation
 dags_are_paused_at_creation = True
 
-# When not using pools, tasks are run in the "default pool",
-# whose size is guided by this config element
-non_pooled_task_slot_count = 128
-
 # The maximum number of active DAG runs per DAG
 max_active_runs_per_dag = 16
 
@@ -100,10 +115,10 @@ max_active_runs_per_dag = 16
 load_examples = True
 
 # Where your Airflow plugins are stored
-plugins_folder = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/plugins
+plugins_folder = /usr/local/airflow/plugins
 
 # Secret key to save connection passwords in the db
-fernet_key = 6y8eV0s5Jnbipo-bPOwk0ZJJe8LpgoiME9f2cukIS8U=
+fernet_key = cr3RMDQL2xYPZVO-K2fmvq8jAtooDxniF_GELjCyGrg=
 
 # Whether to disable pickling dags
 donot_pickle = False
@@ -181,7 +196,7 @@ password =
 [operators]
 # The default owner assigned to each new operator, unless
 # provided explicitly or passed via `default_args`
-default_owner = Airflow
+default_owner = airflow
 default_cpus = 1
 default_ram = 512
 default_disk = 512
@@ -297,6 +312,8 @@ cookie_secure = False
 # Set samesite policy on session cookie
 cookie_samesite =
 
+# Default setting for wrap toggle on DAG code and TI log views.
+default_wrap = False
 
 [email]
 email_backend = airflow.utils.email.send_email_smtp
@@ -390,6 +407,13 @@ ssl_key =
 ssl_cert =
 ssl_cacert =
 
+# Celery Pool implementation.
+# Choices include: prefork (default), eventlet, gevent or solo.
+# See:
+#   https://docs.celeryproject.org/en/latest/userguide/workers.html#concurrency
+#   https://docs.celeryproject.org/en/latest/userguide/concurrency/eventlet.html
+pool = prefork
+
 [celery_broker_transport_options]
 # This section is for specifying options which can be passed to the
 # underlying celery broker transport.  See:
@@ -447,7 +471,7 @@ print_stats_interval = 30
 # This is used by the health check in the "/health" endpoint
 scheduler_health_check_threshold = 30
 
-child_process_log_directory = /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/logs/scheduler
+child_process_log_directory = /usr/local/airflow/logs/scheduler
 
 # Local task jobs periodically heartbeat to the DB. If the job has
 # not heartbeat in this many seconds, the scheduler will mark the
@@ -567,9 +591,22 @@ api_rev = v3
 hide_sensitive_variable_fields = True
 
 [elasticsearch]
-elasticsearch_host =
-elasticsearch_log_id_template = {dag_id}-{task_id}-{execution_date}-{try_number}
-elasticsearch_end_of_log_mark = end_of_log
+# Elasticsearch host
+host =
+# Format of the log_id, which is used to query for a given tasks logs
+log_id_template = {dag_id}-{task_id}-{execution_date}-{try_number}
+# Used to mark the end of a log stream for a task
+end_of_log_mark = end_of_log
+# Qualified URL for an elasticsearch frontend (like Kibana) with a template argument for log_id
+# Code will construct log_id using the log_id template from the argument above.
+# NOTE: The code will prefix the https:// automatically, don't include that here.
+frontend =
+# Write the task logs to the stdout of the worker, rather than the default files
+write_stdout = False
+# Instead of the default log formatter, write the log lines as JSON
+json_format = False
+# Log fields to also attach to the json output, if enabled
+json_fields = asctime, filename, lineno, levelname, message
 
 [kubernetes]
 # The repository, tag and imagePullPolicy of the Kubernetes Image for the Worker to Run
@@ -632,7 +669,7 @@ git_password =
 git_sync_root = /git
 git_sync_dest = repo
 # Mount point of the volume if git-sync is being used.
-# i.e. /Users/pranavprajapati/Desktop/Projects_2019/Capstone_Pipeline/dags
+# i.e. /usr/local/airflow/dags
 git_dags_folder_mount_point =
 
 # To get Git-sync SSH authentication set up follow this format
@@ -703,6 +740,13 @@ affinity =
 #   https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.12/#toleration-v1-core
 tolerations =
 
+# **kwargs parameters to pass while calling a kubernetes client core_v1_api methods from Kubernetes Executor
+# provided as a single line formatted JSON dictionary string.
+# List of supported params in **kwargs are similar for all core_v1_apis, hence a single config variable for all apis
+# See:
+#   https://raw.githubusercontent.com/kubernetes-client/python/master/kubernetes/client/apis/core_v1_api.py
+kube_client_request_args =
+
 # Worker pods security context options
 # See:
 #   https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
@@ -751,3 +795,9 @@ fs_group =
 #
 # Additionally you may override worker airflow settings with the AIRFLOW__<SECTION>__<KEY>
 # formatting as supported by airflow normally.
+
+[kubernetes_labels]
+# The Key-value pairs to be given to worker pods.
+# The worker pods will be given these static labels, as well as some additional dynamic labels
+# to identify the task.
+# Should be supplied in the format: key = value
